--- a/index.html
+++ b/index.html
@@ -3,4 +3,7 @@ layout: default
 title: sofer.com
 ---
 
-a new blog
+{% for post in site.posts %}
+  <a href="{{ post.url }}">{{ post.title }}</a>{{ post.date | date_to_string }}<br>
+  {{ post.standfirst }}
+{% endfor %}
