--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@ layout: default
 title: sofer.com
 ---
 {% for post in site.posts %}
-	<div class="strapline">
-	    <div class="breadcrumb"><a href="/{{ post.categories.first }}.html">{{ post.categories.first }}</a> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></div>
-	    <div class="date">{{ post.date | date: "%e %B %Y" }}</div>
-	</div>    
-	<div class='content'>
-	  {{ post.standfirst | textilize }}
-	</div>
+  {% if post.category != "hidden" %}
+  	<div class="strapline">
+  	    <div class="breadcrumb"><a href="/{{ post.categories.first }}.html">{{ post.categories.first }}</a> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></div>
+  	    <div class="date">{{ post.date | date: "%e %B %Y" }}</div>
+  	</div>    
+  	<div class='content'>
+  	  {{ post.standfirst | textilize }}
+  	</div>
+  {% endif %}
 {% endfor %}
 
 
